--- a/OBDARMSYSTEM/ARMSYSTEM/Views/Phones/Index.cshtml
+++ b/OBDARMSYSTEM/ARMSYSTEM/Views/Phones/Index.cshtml
@@ -5,15 +5,15 @@
     ViewData["Title"] = "Телефоны Физики";
 }
 <div class="row">
-      @(Html.Kendo().Button()
+    @(Html.Kendo().Button()
         .Name("AddPhoneButton")
-        .HtmlAttributes(new { type = "button"})
-        .Content("Добавить телефон"))      
-      @(Html.Kendo().Button()
+        .HtmlAttributes(new { type = "button" })
+        .Content("Добавить телефон"))
+    @(Html.Kendo().Button()
         .Name("BlackListButton")
-        .HtmlAttributes(new { type = "button"})
-        .Content("Отправить в черный список"))     
-      
+        .HtmlAttributes(new { type = "button" })
+        .Content("Отправить в черный список"))
+
 
 </div>
 
@@ -22,7 +22,7 @@
         .Name("grid")
         .Columns(columns =>
         {
-            columns.Select().Width(50);            
+            columns.Select().Width(50);
             columns.Bound(c => c.Phone).ClientTemplate("<a href=" + Url.Content("Details/") + "#: Id #>#: Phone #</a></td>").Width(120);
             columns.Bound(c => c.City).Width(100);
             columns.Bound(c => c.Street).Width(200);
@@ -33,8 +33,8 @@
             columns.Bound(c => c.Patronymic);
             columns.Bound(c => c.DateUpdate);
         })
-        .Resizable(resize => resize.Columns(true))
-        .Editable(editable => editable.Mode(GridEditMode.PopUp))
+        .PersistSelection()
+        .Resizable(resize => resize.Columns(true))        
         .ToolBar(toolbar =>
         {
             toolbar.Excel().Text("Сохранить в Excel");
@@ -62,7 +62,7 @@
 </div>
 
 <style>
-    .cPhone{
-        color:cornflowerblue;
+    .cPhone {
+        color: cornflowerblue;
     }
 </style>
