--- a/OBDARMSYSTEM/ARMSYSTEM/Views/Projects/Edit.cshtml
+++ b/OBDARMSYSTEM/ARMSYSTEM/Views/Projects/Edit.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DateCreate" class="control-label"></label>
-                <kendo-datetimepicker for="DateCreate" class="form-control k-textbox" />
+                <kendo-datetimepicker for="DateCreate" class="form-control " />
                 <span asp-validation-for="DateCreate" class="text-danger"></span>
             </div>
         </form>
