--- a/OBDARMSYSTEM/ARMSYSTEM/Views/BasesProjects/Details.cshtml
+++ b/OBDARMSYSTEM/ARMSYSTEM/Views/BasesProjects/Details.cshtml
@@ -1,54 +1,61 @@
-﻿@model ARMSYSTEM.Models.BasesProject
-
+﻿@using ARMSYSTEM.ViewModels
+@model ARMSYSTEM.ViewModels.BasesProjectViewModel
 @{
     ViewData["Title"] = "Details";
 }
+<div class="row">
+    <h2>@Model.ProjectName:@Model.Name</h2>
+    <div>
+        <h4>@Model.description</h4>
+        <h6>Дата создания @Model.dateCreate</h6>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.idParrentBase)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.idParrentBase)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.filters)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.filters)
+            </dd>
 
-<h2>Details</h2>
+        </dl>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-4">
+        @(Html.Kendo().Grid<ARMSYSTEM.Models.PhoneBases>()
+            .Name("PhoneBasesGrid")
+            .AutoBind(true)
+            .Columns(column =>
+            {
+                column.Bound(c => c.Phone).ClientFooterTemplate("Количество: #= count#");
+            })
+            .Scrollable()
+            .Sortable(sort => sort.SortMode(GridSortMode.SingleColumn))
+            .DataSource(datasource => datasource
+                    .Ajax()
+                    .ServerOperation(false)
+                    .Aggregates(aggregates =>
+                    {
+                        aggregates.Add(p => p.Phone).Count();
+                    }))
+            .BindTo(ViewBag.PhonesList)
+        )
+    </div>
 
-<div>
-    <h4>BasesProject</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.idProject)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.idProject)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.idParrentBase)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.idParrentBase)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.filters)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.filters)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.dateCreate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.dateCreate)
-        </dd>
-    </dl>
+
+    <div class="col-lg-8">
+
+
+
+    </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a>
     <a asp-action="Index">Back to List</a>
 </div>
