--- a/OBDARMSYSTEM/ARMSYSTEM/Views/Filters/Edit.cshtml
+++ b/OBDARMSYSTEM/ARMSYSTEM/Views/Filters/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ARMSYSTEM.Models.BlackList
+﻿@model ARMSYSTEM.Models.Filter
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-<h4>BlackList</h4>
+<h4>Filter</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,14 +14,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
             <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="descripton" class="control-label"></label>
-                <input asp-for="descripton" class="form-control" />
-                <span asp-validation-for="descripton" class="text-danger"></span>
+                <label asp-for="Template" class="control-label"></label>
+                <input asp-for="Template" class="form-control" />
+                <span asp-validation-for="Template" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -34,6 +34,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
